--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </ul>
       <li>Multipotencialidade</li>
         <ul>
-          <li><h2>♾️</h2></li>
+          <li><p  style="font-size:30px; margin:0;" >♾️</p></li>
           <li>Scanner</li>
           <li>Gostos</li>
           <li>Áreas</li>
