hr, css internal style_body_hr

--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
   <head>
     <meta charset="utf-8">
     <title>✝️ Desunoto ✝️</title>
+    <style>
+      body{
+       background-color:#F8F8FB;
+      }
+        hr.cruz {
+        overflow: visible;
+        padding: 0;
+        border: none;
+        border-top: double #BEBEBE;
+        border-width: 4px;
+        color: #BEBEBE;
+        text-align: center;
+        width: 37%;
+        margin-top: 2em;
+      }
+      hr.cruz:after {
+        content: "✝️";
+        display: inline-block;
+        position: relative;
+        top: -0.7em;
+        font-size: 2em;
+        padding: 0 0.2em;
+        color: #BEBEBE;
+        background:#F8F8FB;
+      }
+    </style>
   </head>
 
   <body style="background-color:#F8F8FB;">
@@ -15,11 +41,11 @@
       </audio>
     </center>
     <p><em>Não importa saberem quem eu sou, isto não fará de mim melhor ou pior. O que importa é saberem <strong>quem são</strong>, isso sim fará a diferença.</em></p>
-    <p><em>Devemos, fazer o que é certo, ou devemos focar naquilo que nascemos para fazer?</em></p>
+    <p><em>Devemos, fazer o que é certo, ou focar naquilo que nascemos para fazer?</em></p>
     <a href="Autenticidade.html" style="color:#224C99;">
       <p><strong>Qem é você?</strong></p>
     </a>
-    <hr size="3" noshade color="#BEBEBE">
+    <hr class="cruz">
     <h3>✝️ Habilidades ✝️</h3>
     <ul>
       <li>Lógica
@@ -87,7 +113,7 @@
           <li>Ciclope</li>
         </ul>
     </ul>
-    <hr size="3" noshade color="#BEBEBE">
+    <hr class="cruz">
     <table cellspacing="5">
       <thead>
         <tr>
