--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
   </head>
 
-  <body style="background-color:#F8F8FB;">
+  <body>
     <center>
       <a href="Persistir.html"><img src="Images/Algumas peças.png" alt="vida"></a>
       <h1>✝️ Vida? ✝️</h1>
