--- a/Autenticidade.html
+++ b/Autenticidade.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>✝️ Eu Autêntico ✝️</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
-<body style="background-color:#F8F8FB;">
-  <a href="index.html" style="color:#224C99;"><h3>Home</h3></a>
-  <h1>✝️ Seu Eu Autêntico! ✝️</h1>
-  <h2>Resumo:</h2>
-  <p style="font-size:25px">
+<body>
+  <a href="index.html"><h3 class="button">Home</h3></a>
+  <h1 class="title">✝️ Seu Eu Autêntico! ✝️</h1>
+  <p class="symbol">
+    <strong>Resumo:</strong>
+  </p>
+  <p class="htext">
     Existe uma variedade de conceituações de autenticidade, que vão desde enfatizar a
     atualização das “necessidades do ser” (Maslow, 1968) até o envolvimento em
     comportamento autodeterminado consistente com necessidades organísmicas
@@ -27,10 +31,10 @@
     sub-escalas têm implicações importantes para vários aspectos do funcionamento
     psicológico e bem estar.
   </p>
-  <p style="font-size:30px">
-    Autenticidade:
+  <p class="symbol">
+    <strong>Autenticidade:</strong>
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     O que torna uma pessoa verdadeira ou autêntica? A tradição humanista, como
     exemplificada por, por exemplo, Maslow (1968), sugere que a autenticidade ocorre
     quando os indivíduos descobrem sua verdadeira natureza interior satisfazendo
@@ -47,7 +51,7 @@
     que envolvem o valor do amor baseado na obtenção de padrões ou expectativas de
     base externa.
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Outros estudiosos enfatizam a importância dos processos auto-regulatórios para a
     autenticidade (por exemplo Deci & Ryan, 1985, 1995; Sheldon & Kasser, 1995). A
     Teoria da Autodeterminação (Deci & Ryan, 1995, 2000) sugere que a autenticidade
@@ -58,7 +62,7 @@
     associada ao funcionamento inautêntico (ver Sheldon & Kasser, 1995 para um exemplo
     empírico).
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Goldman e Kernis (2002) descobriram que quanto mais os indivíduos caracterizavam
     seus objetivos acadêmicos como refletindo “quem eles realmente são”, mais afeto
     positivo e satisfação com a vida eles relataram aproximadamente um mês depois.
@@ -66,7 +70,7 @@
     autônoma) está relacionada a níveis mais altos e mais estáveis de sentimentos de
     autoestima (Kernis, Paradise, Whitaker, Wheatman e Goldman, 2000).
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Em suma, a literatura existente apóia a afirmação de que a autenticidade
     psicológica é um aspecto importante do funcionamento psicológico saudável e do
     bem-estar subjetivo positivo. Nossos objetivos neste artigo são descrever uma
@@ -74,15 +78,15 @@
     obtidos com nossa medida projetada para avaliar esses componentes, (Goldman &
     Kernis, 2001).
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Em nossa opinião, a autenticidade pode ser definida geralmente como a operação
     desobstruída do eu verdadeiro ou central de alguém em seu empreendimento diário (ver
     também Kernis, in press). Mais especificamente envolve os seguintes
     quatro componentes: <strong>Consciência</strong>, <strong>Processamento imparcial</strong>,
     <strong>Comportamento</strong> e <strong>Orientação relacional</strong>.
   </p>
-  <p style="font-size:25px">
-    O componente de <em style="color:#1D9D7D;"><strong>consciência</strong></em> refere-se a ter consciência e confiança em seus
+  <p class="htext">
+    O componente de <em class="enfase"><strong>consciência</strong></em> refere-se a ter consciência e confiança em seus
     motivos, sentimentos, desejos e cognições autorrelevantes. Envolve estar ciente de
     seus pontos forte e fracos, características de traços, emoções, incluindo
     conhecimento sobre os auto-aspectos contraditórios inerentes de uma pessoa e
@@ -98,9 +102,9 @@
     autoaspectos considerados internamente consistentes com o autoconceito geral de
     uma pessoa.
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Um segundo componente da autenticidade envolve o
-    <em style="color:#1D9D7D;"><strong>processamento imparcial</strong></em> de
+    <em class="enfase"><strong>processamento imparcial</strong></em> de
     informações auto-relevantes. O processamento imparcial reflete a
     objetividade na avaliação dos autoaspectos, atributos, qualidades e potenciais
     positivos e negativos de uma pessoa. Dito de outra forma, o processamento imparcial
@@ -108,10 +112,10 @@
     experiências internas e informações avaliativas geradas externamente” (Kernis, in
     press).
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Um terceiro componente de autenticidade envolve
-    <em style="color:#1D9D7D;"><strong>comportamento</strong></em> ou
-    <em style="color:#1D9D7D;"><strong>ação</strong></em>.
+    <em class="enfase"><strong>comportamento</strong></em> ou
+    <em class="enfase"><strong>ação</strong></em>.
     Autenticidade reflete agir de acordo com os próprios valores, preferências e
     necessidades, em oposição a agir apenas para agradar os outros ou para obter
     recompensas ou evitar punições, mesmo que isso signifique agir falsamente. Em
@@ -126,16 +130,16 @@
     sentimentos, motivos e inclinações centrais nos contextos ambientais que se
     encontram.
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Finalmente, um quarto componente é de
-    <em style="color:#1D9D7D;"><strong>natureza relacional</strong></em>,
+    <em class="enfase"><strong>natureza relacional</strong></em>,
     envolvendo a valorização e obtenção de abertura e
     veracidade nos relacionamentos íntimos. A autenticidade relacional envolve um
     processo ativo de auto-revelação e o desenvolvimento de intimidade e confiança
     mútuas para que os íntimos vejam os verdadeiros aspectos de si mesmos, bons e
     ruins.
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Vemos esses múltiplos componentes de autenticidade como relacionados, mas
     separáveis uns dos outros. Por exemplo, há invariavelmente situações em que as
     pressões ambientais podem militar contra a expressão do verdadeiro eu (por exemplo,
@@ -151,7 +155,7 @@
     pode envolver ativamente ignorar ou negar a opinião de alguém ou a crença desenfreada
     na superioridade de suas habilidades de julgamento.
   </p>
-  <p style="font-size:25px">
+  <p class="htext">
     Em essência, existem circunstâncias complexas nas quais as pessoas devem
     responder a sentimentos e objetivos simultaneamente conflitantes. Em nossa
     opinião, a autenticidade envolve o reconhecimento dessas complexidades e o
@@ -167,28 +171,28 @@
     específicas, uma forma de autoestima frágil (Delci & Ryan, 1995; Kernis, in press,
     Paradise & Kernis, 1999), afeto diário e satisfação com a vida.
   </p>
-  <p style="font-size:30px">
-    Inventário de Autenticidade
-  <p style="font-size:25px">
+  <p class="symbol">
+    <strong>Inventário de Autenticidade</strong>
+  <p class="htext">
     O inventário é composto por quatro subescalas:
   </p>
-  <p style="font-size:25px">
-    <em style="color:#1D9D7D;"><strong>Consciência</strong></em> (por exemplo, “Eu
+  <p class="htext">
+    <em class="enfase"><strong>Consciência</strong></em> (por exemplo, “Eu
     geralmente estou ciente de momentos em
     que minhas necessidades e/ou motivos
     estão em conflito uns com os outros”, “Eu
     estou ciente quando não estou sendo meu
     verdadeiro eu”).
     </p>
-  <p style="font-size:25px">
-    <em style="color:#1D9D7D;"><strong>Processamento Imparcial</strong></em>
+  <p class="htext">
+    <em class="enfase"><strong>Processamento Imparcial</strong></em>
     (por exemplo, “Geralmente sou capaz de
     considerar objetivamente minhas limitações
     e deficiências”, “Não exagero meus pontos
     fortes para mim mesmo”).
    </p>
-   <p style="font-size:25px">
-    <em style="color:#1D9D7D;"><strong>Comportamento</strong></em>
+   <p class="htext">
+    <em class="enfase"><strong>Comportamento</strong></em>
     (por exemplo, “Estou disposto a usar a
     máscara social certa para a ocasião social
     certa se isso me proporcionar o que quero
@@ -196,8 +200,8 @@
     gosto de receber crédito por coisas que não
     fiz”).
    </p>
-   <p style="font-size:25px">
-    <em style="color:#1D9D7D;"><strong>Orientação relacional</strong></em> (por exemplo,
+   <p class="htext">
+    <em class="enfase"><strong>Orientação relacional</strong></em> (por exemplo,
     “Eu dou muita importância para que outras
     pessoas próximas entendam quem eu
     realmente sou”, “Pessoas de quem sou
@@ -212,7 +216,7 @@
     Traduzido por:
   </p>
   <center>
-    <p style="font-size:100px;font-family:Brush Script MT;">
+    <p class="SS">
       <strong>SS</strong>
     </p>
   </center>
