--- a/Contact.html
+++ b/Contact.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>✝️ Contact ✝️</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
-  <body style="background-color:#F8F8FB;">
-    <a href="index.html" style="color:#224C99;"><h3>Home</h3></a>
-    <h2>✝️ Contact ✝️</h2>
+  <body>
+    <a href="index.html"><h3 class="button">Home</h3></a>
+    <h2 class="title">✝️ Contact ✝️</h2>
     <ol>
       <li><em>WhatsApp - Don't have</em></li>
       <li><em>Email - I have but I will not disclose</em></li>
       <li><em>Instagram - I don't like</em></li>
       <li><em>Facebook - I use just for spy</em></li>
     </ol>
-    <hr size="3" color="#BEBEBE">
+    <hr>
     <!--Precisa configurar o Browser para enviar emails. Seção 3, lição 27-->
     <form action="mailto:sinapseneural@gmail.com" method="post" enctype="text/plain">
       <p><label for="yourToughts">Your Toughts:</label></p>
@@ -23,7 +25,7 @@
       <input type="button" name="Enviar" value="Enviar">
     </form>
     <center>
-      <p style="font-size:100px;font-family:Brush Script MT;">
+      <p class="SS">
         <strong>SS</strong>
       </p>
     </center>
