--- a/index.html
+++ b/index.html
@@ -4,49 +4,31 @@
   <head>
     <meta charset="utf-8">
     <title>✝️ Desunoto ✝️</title>
-    <style>
-      body{
-       background-color:#F8F8FB;
-      }
-        hr.cruz {
-        overflow: visible;
-        padding: 0;
-        border: none;
-        border-top: double #BEBEBE;
-        border-width: 4px;
-        color: #BEBEBE;
-        text-align: center;
-        width: 37%;
-        margin-top: 2em;
-      }
-      hr.cruz:after {
-        content: "✝️";
-        display: inline-block;
-        position: relative;
-        top: -0.7em;
-        font-size: 2em;
-        padding: 0 0.2em;
-        color: #BEBEBE;
-        background:#F8F8FB;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
   </head>
 
   <body>
-    <center>
-      <a href="Persistir.html"><img src="Images/Algumas peças.png" alt="vida"></a>
-      <h1>✝️ Vida? ✝️</h1>
-      <audio controls loop>
-        <source src="Sound/DYING WIS.mp3" type="audio/mp3">
-      </audio>
-    </center>
-    <p><em>Não importa saberem quem eu sou, isto não fará de mim melhor ou pior. O que importa é saberem <strong>quem são</strong>, isso sim fará a diferença.</em></p>
-    <p><em>Devemos, fazer o que é certo, ou focar naquilo que nascemos para fazer?</em></p>
-    <a href="Autenticidade.html" style="color:#224C99;">
-      <p><strong>Qem é você?</strong></p>
-    </a>
-    <hr class="cruz">
-    <h3>✝️ Habilidades ✝️</h3>
+    <div class="top">
+      <center>
+        <h1 class="title">✝️ Vida? ✝️</h1>
+          <audio class="som" controls loop>
+            <source src="Sound/DYING WIS.mp3" type="audio/mp3">
+          </audio>
+           <a href=""><img class="window-left" src="Images/church.png" alt="glass"></a>
+          <img class="window-right" src="Images/church.png" alt="glass">
+        <a href="Persistir.html">
+          <img class="puzzle" src="Images/Algumas peças.png" alt="vida">
+        </a>
+        <p><em>Não importa saberem quem eu sou, isto não fará de mim melhor ou pior. O que importa é saberem <strong>quem são</strong>, isso sim fará a diferença.</em></p>
+        <p><em>Devemos, fazer o que é certo, ou focar naquilo que nascemos para fazer?</em></p>
+        <a href="Autenticidade.html">
+          <strong class="button">Qem é você?</strong>
+        </a>
+      </center>
+    </div>
+    <hr>
+    <h3 class="subtitle">✝️ Habilidades ✝️</h3>
     <ul>
       <li>Lógica
         <ul>
@@ -97,7 +79,7 @@
         </ul>
       <li>Multipotencialidade</li>
         <ul>
-          <li><p  style="font-size:30px; margin:0;" >♾️</p></li>
+          <li><p  class="symbol">♾️</p></li>
           <li>Scanner</li>
           <li>Gostos</li>
           <li>Áreas</li>
@@ -113,11 +95,11 @@
           <li>Ciclope</li>
         </ul>
     </ul>
-    <hr class="cruz">
+    <hr>
     <table cellspacing="5">
       <thead>
         <tr>
-          <td><h3>Hobbies</h3></td>
+          <td><h3 class="subtitle">✝️ Hobbies ✝️</h3></td>
         </tr>
       </thead>
       <tbody>
@@ -157,9 +139,9 @@
         </tr>
       </tbody>
     </table>
-    <strong><a href="Contact.html" style="color:#224C99;">Contact</a></strong>
+    <strong><a href="Contact.html"><p class="button">Contact</p></a></strong>
     <center>
-      <p style="font-size:100px;font-family:Brush Script MT;">
+      <p class="SS">
         <strong>SS</strong>
       </p>
     </center>
