--- a/index.html
+++ b/index.html
@@ -1,150 +1,235 @@
 <!DOCTYPE html>
-<html lang="pt" dir="ltr">
+<html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>✝️ Desunoto ✝️</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>✝️ Erro ✝️</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
 
-  <body>
-    <div class="top">
-      <center>
-        <h1 class="title">✝️ Vida? ✝️</h1>
-          <audio class="som" controls loop>
-            <source src="Sound/DYING WIS.mp3" type="audio/mp3">
-          </audio>
-           <a href=""><img class="window-left" src="Images/church.png" alt="glass"></a>
-          <img class="window-right" src="Images/church.png" alt="glass">
-        <a href="Persistir.html">
-          <img class="puzzle" src="Images/Algumas peças.png" alt="vida">
-        </a>
-        <p><em>Não importa saberem quem eu sou, isto não fará de mim melhor ou pior. O que importa é saberem <strong>quem são</strong>, isso sim fará a diferença.</em></p>
-        <p><em>Devemos, fazer o que é certo, ou focar naquilo que nascemos para fazer?</em></p>
-        <a href="Autenticidade.html">
-          <strong class="button">Qem é você?</strong>
-        </a>
-      </center>
-    </div>
-    <hr>
-    <h3 class="subtitle">✝️ Habilidades ✝️</h3>
-    <ul>
-      <li>Lógica
-        <ul>
-        <li>Puzzles</li>
-        <li>Conexões</li>
-        <li>Dados</li>
-        <li>Matemática</li>
-        </ul>
-      </li>
-      <li>Autodidata
-        <ul>
-          <li>Conteúdos acadêmicos</li>
-          <li>Autoconhecimento</li>
-          <li>Filosofia</li>
-        </ul>
-      </li>
-      <li>Criativo</li>
-        <ul>
-          <li>Significados</li>
-          <li>Sentido</li>
-          <li>Funcional</li>
-          <li>Gosto pessoal</li>
-        </ul>
-      <li>Foco</li>
-        <ul>
-          <li>1/1</li>
-          <li>Propósito</li>
-          <li>Desafio</li>
-          <li>Meditação</li>
-          <li>Qualidade</li>
-        </ul>
-      <li>Solucionador</li>
-        <ul>
-          <li>Objetivo</li>
-          <li>Explicação</li>
-          <li>Observação</li>
-          <li>Suposição</li>
-          <li>Confirmação</li>
-        </ul>
-      <li>Curioso</li>
-        <ul>
-          <li>Interesse</li>
-          <li>Ferramentas</li>
-          <li>Conhecimento</li>
-          <li>Expeculação</li>
-          <li>Descobrir</li>
-          <li>Satisfação</li>
-        </ul>
-      <li>Multipotencialidade</li>
-        <ul>
-          <li><p  class="symbol">♾️</p></li>
-          <li>Scanner</li>
-          <li>Gostos</li>
-          <li>Áreas</li>
-          <li>Liberdade</li>
-        </ul>
-      <li>Noturno</li>
-        <ul>
-          <li>Professor X</li>
-          <li>Wolverine</li>
-          <li>Vampira</li>
-          <li>Gambit</li>
-          <li>Tempestade</li>
-          <li>Ciclope</li>
-        </ul>
-    </ul>
-    <hr>
-    <table cellspacing="5">
-      <thead>
-        <tr>
-          <td><h3 class="subtitle">✝️ Hobbies ✝️</h3></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <table>
-              <tr>
-                <td>Sudoku</td>
-                <td>✝️✝️✝️✝️✝️</td>
-              </tr>
-              <tr>
-                <td>Nonogram</td>
-                <td>✝️✝️✝️✝️✝️</td>
-              </tr>
-              <tr>
-                <td>Moba</td>
-                <td>✝️✝️✝️✝️</td>
-              </tr>
-            </table>
-          </td>
-          <td>
-            <table>
-              <tr>
-                <td>Groovepad</td>
-                <td>✝️✝️✝️</td>
-              </tr>
-              <tr>
-                <td>Brain:code</td>
-                <td>✝️✝️✝️</td>
-              </tr>
-              <tr>
-                <td>chess</td>
-                <td>✝️✝️</td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <strong><a href="Contact.html"><p class="button">Contact</p></a></strong>
-    <center>
-      <p class="SS">
-        <strong>SS</strong>
-      </p>
-    </center>
-  </body>
+  <script>
+    function imageZoom(imgID, resultID) {
+      var img, lens, result, cx, cy;
+      img = document.getElementById(imgID);
+      result = document.getElementById(resultID);
+      /*create lens:*/
+      lens = document.createElement("DIV");
+      lens.setAttribute("class", "img-zoom-lens");
+      /*insert lens:*/
+      img.parentElement.insertBefore(lens, img);
+      /*calculate the ratio between result DIV and lens:*/
+      cx = result.offsetWidth / lens.offsetWidth;
+      cy = result.offsetHeight / lens.offsetHeight;
+      /*set background properties for the result DIV:*/
+      result.style.backgroundImage = "url('" + img.src + "')";
+      result.style.backgroundSize = (img.width * cx) + "px " + (img.height * cy) + "px";
+      /*execute a function when someone moves the cursor over the image, or the lens:*/
+      lens.addEventListener("mousemove", moveLens);
+      img.addEventListener("mousemove", moveLens);
+      /*and also for touch screens:*/
+      lens.addEventListener("touchmove", moveLens);
+      img.addEventListener("touchmove", moveLens);
+
+      function moveLens(e) {
+        var pos, x, y;
+        /*prevent any other actions that may occur when moving over the image:*/
+        e.preventDefault();
+        /*get the cursor's x and y positions:*/
+        pos = getCursorPos(e);
+        /*calculate the position of the lens:*/
+        x = pos.x - (lens.offsetWidth / 2);
+        y = pos.y - (lens.offsetHeight / 2);
+        /*prevent the lens from being positioned outside the image:*/
+        if (x > img.width - lens.offsetWidth) {
+          x = img.width - lens.offsetWidth;
+        }
+        if (x < 0) {
+          x = 0;
+        }
+        if (y > img.height - lens.offsetHeight) {
+          y = img.height - lens.offsetHeight;
+        }
+        if (y < 0) {
+          y = 0;
+        }
+        /*set the position of the lens:*/
+        lens.style.left = x + "px";
+        lens.style.top = y + "px";
+        /*display what the lens "sees":*/
+        result.style.backgroundPosition = "-" + (x * cx) + "px -" + (y * cy) + "px";
+      }
+
+      function getCursorPos(e) {
+        var a, x = 0,
+          y = 0;
+        e = e || window.event;
+        /*get the x and y positions of the image:*/
+        a = img.getBoundingClientRect();
+        /*calculate the cursor's x and y coordinates, relative to the image:*/
+        x = e.pageX - a.left;
+        y = e.pageY - a.top;
+        /*consider any page scrolling:*/
+        x = x - window.pageXOffset;
+        y = y - window.pageYOffset;
+        return {
+          x: x,
+          y: y
+        };
+      }
+    }
+  </script>
+</head>
+
+<body id="nolight" class="lightoff">
+  <img id="help" class="eye" src="images/Olhoemvc.png" alt="">
+  <img id="open" class="door" src="images/door.png" alt="">
+  <div id="myresult" class="img-zoom-result"></div>
+
+
+
+
+  <div class="div2">
+    <form>
+      <label id="snh" class="senha" for="pswd">Senha: </label>
+      </br>
+      <input id="pswd" class="box" type="password" keypress="checkPswd();">
+      </br>
+      <input id="enviar" class="verificar" class="enviar" type="button" value="Verificar" onclick="checkPswd();" />
+    </form>
+  </div>
+  <script type="text/javascript">
+    var input = document.getElementById("pswd");
+    input.addEventListener("keypress", function(event) {
+      if (event.keyCode === 13) {
+        event.preventDefault();
+        document.getElementById("enviar").click();
+      }
+    });
+
+    function checkPswd() {
+      var confirmPassword = "16109";
+      var password = document.getElementById("pswd").value;
+      if (password == confirmPassword) {
+        window.location.href = "file:///C:/Users/Santiago%20Neto/Desktop/Web%20Development%200.2/HTML%20-%20Desunoto/vida.html";
+      } else {
+        alert("Senha incorreta");
+      }
+    }
+  </script>
+
+
+
+  <div id="dc1" class="dica1">
+    <p>Muito difícil?</p>
+    <p>Vou dar uma dica:</p>
+    <p>A abscissa tem 2 dígitos,</p>
+    <p>mas a cota só tem 1!!!</p>
+  </div>
+  <div id="dc2" class="dica2">
+    <p>Mais uma dica?</p>
+    <p>Ok.</p>
+    <p>A peça que falta</p>
+    <p>possuiria o tom de cinza mediano!!!</p>
+  </div>
+  <div id="dc3" class="dica3">
+    <p>Se quiser pode testar as combinações</p>
+    <p>das coordenadas até acertar a senha.</p>
+    <p>Levando em consideração a primeira dica,</p>
+    <p>terá 205 combinações para testar!!!</p>
+  </div>
+  <div id="dc4" class="dica4">
+    <p>Mas se for levar em consideração também a segunda dica, então...</p>
+    <p>Serão 117 combinações!!!</p>
+  </div>
+  <div id="dc5" class="dica5">
+    <p>Se já cansou de procurar, é só apertar CTRL+U,</p>
+    <p>e ir até a linha 110</p>
+  </div>
+  <div id="dc6" class="dica6">
+    <p><spam style="font-size: 120%;">Foi um prazer jogarmos juntos!!!</spam></p>
+  </div>
+
+
+  <img id="myimage" class="found" src="Images/cubicpuzzle.png" alt="vida">
+
+  <script>
+    imageZoom("myimage", "myresult");
+  </script>
+
+
+
+  <audio id="play" loop>
+    <source src="Sound/Puzzle Game.mp3" type="audio/mp3">
+  </audio>
+
+  <div class="instrução1" id=1 onclick="primeiraetapa(1);">
+    <h1 class="topvisivel">Vamos começar com um jogo!!!</h1>
+    <br>
+    <p>Para entrar no site, terá que descobrir a senha.</p>
+    <p>Ao começar encontrará uma escultura com peças de quebra-cabeça.</p>
+    <p>Nessa figura terá que encontrar a peça que está faltando.</p>
+    <p>As coordenadas desta peça é a senha.</p>
+    <p>Para ficar mais claro, vou dar um exemplo.</p>
+  </div>
+  <div class="instrução2" id=2 onclick="segundaetapa(2)">
+    <h2>Em nosso exemplo, a peça que falta está em vermelho.</h2>
+    <img class="puzzle-red" src="Images/Exemple puzzle red.png" alt="">
+  </div>
+  <div class="instrução3" id=3 onclick="começar(3)" type="checkbox">
+    <img class="puzzle-coo" src="Images/Exemple puzzle coordenadas.png" alt="">
+    <p>As coordenadas seguem a ordem <strong>X, Y, Z.</strong></p>
+    <p><strong>X</strong>, que está em <strong>azul</strong>, é a quantidade de peças na horizontal(peças deitadas)
+      que contamos da <strong>ponta inferior</strong> para a <strong>esquerda.</strong></p>
+    <p><strong>Y</strong>, que está em <strong>verde</strong>, é a quantidade de peças na horizontal(peças deitadas)
+      que contamos da <strong>ponta inferior</strong> para a <strong>direita.</strong></p>
+    <p><strong>Z</strong>, que está em <strong>amarelo</strong>, é a <strong>altura</strong> ou a quantidade de peças na vertical(peças de pé)
+      que contamos da coluna partindo da base.</p>
+      <br>
+    <h3 style="text-align: center;">COMEÇAR</h3>
+  </div>
+
+  <script>
+    function primeiraetapa(divid) {
+      document.getElementById("2").style.display = "table";
+      document.getElementById("1").style.display = "none";
+    }
+  </script>
+
+  <script>
+    function segundaetapa(divid) {
+      document.getElementById("3").style.display = "table";
+      document.getElementById("2").style.display = "none";
+    }
+  </script>
+
+  <script>
+    function começar(divid) {
+      document.getElementById("myresult").style.animationPlayState = "running";
+      document.getElementById("dc6").style.animationPlayState = "running";
+      document.getElementById("dc5").style.animationPlayState = "running";
+      document.getElementById("dc4").style.animationPlayState = "running";
+      document.getElementById("dc3").style.animationPlayState = "running";
+      document.getElementById("dc2").style.animationPlayState = "running";
+      document.getElementById("dc1").style.animationPlayState = "running";
+      document.getElementById("pswd").style.animationPlayState = "running";
+      document.getElementById("enviar").style.animationPlayState = "running";
+      document.getElementById("snh").style.animationPlayState = "running";
+      document.getElementById("help").style.animationPlayState = "running";
+      document.getElementById("open").style.animationPlayState = "running";
+      document.getElementById("nolight").style.animationPlayState = "running";
+      document.getElementById("myimage").style.animationPlayState = "running";
+      document.getElementById("play").play();
+      document.getElementById("3").style.display = "none";
+    }
+  </script>
+
+
+  <script type="text/javascript">
+    function playmusic() {
+      var input = document.getElementById("play").play();
+    }
+  </script>
+
+</body>
 
 </html>
