--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 </head>
 
 <body id="nolight" class="lightoff">
-  <img id="help" class="eye" src="images/Olhoemvc.png" alt="">
-  <img id="open" class="door" src="images/door.png" alt="">
+  <img id="help" class="eye" src="Images/Olhoemvc.png" alt="">
+  <img id="open" class="door" src="Images/door.png" alt="">
   <div id="myresult" class="img-zoom-result"></div>
 
 
