redirecionamento para vida

--- a/Autenticidade.html
+++ b/Autenticidade.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="index.html"><h3 class="button">Home</h3></a>
+  <a href="vida.html"><h3 class="button">Home</h3></a>
   <h1 class="title">✝️ Seu Eu Autêntico! ✝️</h1>
   <p class="symbol">
     <strong>Resumo:</strong>
