--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-    <a href="index.html"><h3 class="button">Home</h3></a>
+    <a href="vida.html"><h3 class="button">Home</h3></a>
     <h2 class="title">✝️ Contact ✝️</h2>
     <ol>
       <li><em>WhatsApp - Don't have</em></li>
