--- a/Persistir.html
+++ b/Persistir.html
@@ -9,79 +9,79 @@
   <body>
     <h1 class="title">✝️ Persista Mais ✝️</h1>
     <h2>Porque estou fazendo o que estou fazendo?</h2>
-    <a href="index.html">
+    <a href="vida.html">
       <h3>
         <p class="htext"><em>"Você sozinho não conseguirá mudar o mundo, mas essa é a beleza da vida!"</em></p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Preciso dos outros para atingir meus objetivos, mesmo que de forma indireta. Sozinhos somos apenas cascas vazias!</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Gosto de descobrir, aprender e realizar coisas novas, mas preciso iniciar de algum lugar, e iniciar totalmente do zero, me trará como resultado o zero.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Não sei de tudo, na verdade o que sei é nada, mas posso aprender de tudo, e para isso precisarei de instruções de alguém que já sabe.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Nada se cria, tudo se transforma, diante de funções isoladas aprendidas, suas interações é que trazem algo novo.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Se está aprendendo algo novo, poderá modifica-lo, aperfeiçoa-lo, se acrescentar algo que ja tenha aprendido antes.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Uma coisa de cada vez, uma vez bem dominado, poderá extrair todo seu potencial para novas ideais em conjunto com outro assunto também bem dominado.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">10.000 horas de prática, excelência no assunto, domínio com perfeição.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Não é necessário a perfeição para tudo, todos somos perfeitos do jeito que somos, só precisamos entender quem somos.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Gosto de aprender, dar um passo a mais, por isso preciso persistir mais.</p>
       </h3>
     </a>
       <a href="https://pt.slideshare.net/avingadorablog/death-note-another-note-the-los-angeles-bb-murders-cases-o-caso-dos-assassinatos-de-los-angeles-portugusbr-original"> <p> <br> </p> </a>
-    <a href="index.html">
+    <a href="vida.html">
       <h3>
         <p class="htext">O que busco, não irei encontrar com atalhos, o que busco é a aplicação do que aprendo. Logo, o simples, inevitavelmente será a primeira etapa, e para prosseguir adiante só dependerá do próprio indivíduo.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Por isso não me contentarei apenas com 1, mas irei prosseguir um a um, e persistir mais em cada 1 que escolher, nem que seja para atingir pequenas fases nunca alcançadas antes.</p>
       </h3>
     </a>
-      <a href="index.html"> <p> <br> </p> </a>
-    <a href="index.html">
+      <a href="vida.html"> <p> <br> </p> </a>
+    <a href="vida.html">
       <h3>
         <p class="htext">Por isso faço o que faço.</p>
       </h3>
