--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       var confirmPassword = "16109";
       var password = document.getElementById("pswd").value;
       if (password == confirmPassword) {
-        window.location.href = "file:///C:/Users/Santiago%20Neto/Desktop/Web%20Development%200.2/HTML%20-%20Desunoto/vida.html";
+        window.location.href = "https://bakerstr.github.io/Desunoto/vida";
       } else {
         alert("Senha incorreta");
       }
