--- a/vida.html
+++ b/vida.html
@@ -23,7 +23,7 @@
         <p><em>Não importa saberem quem eu sou, isto não fará de mim melhor ou pior. O que importa é saberem <strong>quem são</strong>, isso sim fará a diferença.</em></p>
         <p><em>Devemos, fazer o que é certo, ou focar naquilo que nascemos para fazer?</em></p>
         <a href="Autenticidade.html">
-          <strong class="button">Qem é você?</strong>
+          <strong class="button">Quem é você?</strong>
         </a>
       </center>
     </div>
